# transcription-tool

./: .gitignore  Call with John Pelech_edited.json  README.md  dev_report_119.md  pyproject.toml  to_do.txt
src/: main.py
src/core/: model_manager.py  queue_manager.py  speaker_manager.py  transcriber.py  vocabulary_processor.py
src/ui/: download_dialog.py  main_window.py  model_dialog.py  settings_dialog.py  speaker_dialog.py  stats_dialog.py  transcript_editor.py  vocabulary_editor.py
src/utils/: config.py  logger.py  preprocessing.py
